Prevent overlap

--- a/client/src/views/Gallery/Filter.less
+++ b/client/src/views/Gallery/Filter.less
@@ -2,7 +2,7 @@
     width: 200px;
     padding: 20px;
     border: 2px solid #f3d250;
-    position: fixed;
+    position: relative;
     left: 1vh;
     top: 18vh;
     height: 34vh;
@@ -10,6 +10,7 @@
     background-color: #59ABDF;
     z-index: 1000;
     border-radius: 20px;
+    margin-right: 1rem;
 }
 
 h2 {
@@ -22,7 +23,7 @@ h3 {
     font-size: 0.9rem;
     margin-right: 120px;
 }
-  
+
 .filter-section {
     margin-bottom: 5px;
 }
@@ -48,6 +49,3 @@ label input[type="checkbox"] {
 //     text-decoration: underline;
 //     cursor: pointer;
 // }
-
-
-  
